operations/manifests/base/istio-system/istio-prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    tier: istio
    app.kubernetes.io/name: prometheus
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/name: prometheus
  sessionAffinity: None
  type: ClusterIP
